--- a/1.2_Cricinfo_Sachin_Tendulkar.ipynb
+++ b/1.2_Cricinfo_Sachin_Tendulkar.ipynb
@@ -5303,7 +5303,7 @@
     "**Conclusion**\n",
     "This concludes a simple analysis of Sachin's career by innings and years. I will conclude with a brief comparison of all the phases of Sachin's career and a plot depicting the same (Average, Strike Rate (SR), ASR (Average + Strike Rate), Match per Century.\n",
     "\n",
-    "It is understandable that statistical frames and numebrs alone cannot capture the genius of the little master. In this case, numbers jst help validate what we all know."
+    "It is understandable that statistical frames and numebrs alone cannot capture the genius of the little master. In this case, numbers just help validate what we all know."
    ]
   },
   {
